                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 06-05-2005 added: SF patch [1194146] video mode switch based on game region - thanks to spiff
  - 06-05-2005 added: SF patch [1196174] make trailing fill characters be part of tag in music template - thanks to spiff
  - 06-05-2005 added: SF patch [1188623] Hides the .py extension when HME is checked - thanks to Nuka1195
  - 06-05-2005 added: SF patch [1196172] remove trailing dash for rss-feeds - thanks to spiff
  - 06-05-2005 changed: OnAction() now returns a bool.  It should be true if the action has been dealt with and
                        needs no further processing, and false if it hasn't been handled.
  - 06-05-2005 added: Check Xbox System-Clock at Startup (GeminiServer)
  - 05-05-2005 fixed: smoothness of NTSC video stored using 3:2 pulldown. Still plays at 24fps.. (dvdplayer)
  - 05-05-2005 fixed: aspectratio selection for dvdplayer
  - 05-05-2005 added: adjustable audio/video delay in dvdplayer
  - 05-05-2005 changed: Better discontinuity handling in dvdplayer
  - 05-05-2005 changed: Seek moved onto the right thumb stick - less clashes.
  - 05-05-2005 added: Code support for volume bar in video OSD audio submenu - needs skinning.
  - 05-05-2005 fixed: Videos Original Size view wasn't initialized properly.
  - 05-05-2005 changed: Scripts/Programs windows now use ViewControl.
  - 05-05-2005 added: Musepack codec to paplayer.
  - 05-05-2005 fixed: .m3u was detected as a valid underlying media file for .cue sheets
  - 05-05-2005 added: Seek bar enabled - move left/right on left thumb stick.
  - 05-05-2005 updated: Chinese (Simple) language file (Thnx to iikii)